tests/toylang/pos/000121_cdrc2.toylang
program a = { while a + a do if a then sleep; } .
