tests/toylang/neg/001588_mutation.toylang
program a = { while a do); } .
